data to page is functional

--- a/index.html
+++ b/index.html
@@ -33,6 +33,33 @@
                 </div> 
               </header>
 
+              <div class="sport mb3">
+                <h2 class="f4 fw8 mv0 bg-gold ph2 pv1 lh-solid">MLB</h2>
+                <div class="scores flex flex-wrap nl3 nr3">
+                    <dl class="w-50 w-25-l ph3 mb2">
+                        <dt class="f7 fw8 inning">BOTTOM 4 INNING</dt>
+                        <dd class="ml0 f5 home-team">Baltimore 9</dd>
+                        <dd class="ml0 f5 away-team">Chi. Sox 0</dd>
+                    </dl>
+                    <dl class="w-50 w-25-l ph3 mb2">
+                        <dt class="f7 fw8">FINAL</dt>
+                        <dd class="ml0 f5">Pittsburgh 4</dd>
+                        <dd class="ml0 f5">Cincinnati 5</dd>
+                    </dl>
+                    <dl class="w-50 w-25-l ph3 mb2">
+                        <dt class="f7 fw8">FINAL</dt>
+                        <dd class="ml0 f5">LA Angels 8</dd>
+                        <dd class="ml0 f5">Toronto 1</dd>
+                    </dl>
+                    <dl class="w-50 w-25-l ph3 mb2">
+                        <dt class="f7 fw8">4th Inning</dt>
+                        <dd class="ml0 f5">LA DODGERS -</dd>
+                        <dd class="ml0 f5">MILWALKEE BREWERS -</dd>
+                    </dl>
+                </div>
+            </div>
+              </div>
+
 
 
 
