working on .each to retrieve all data and put to scoreboard

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
                         <dd class="ml0 f5 away-team">Chi. Sox 0</dd>
                     </dl>
                     <dl class="w-50 w-25-l ph3 mb2">
-                        <dt class="f7 fw8">FINAL</dt>
-                        <dd class="ml0 f5">Pittsburgh 4</dd>
-                        <dd class="ml0 f5">Cincinnati 5</dd>
+                        <dt class="f7 fw8 inning">FINAL</dt>
+                        <dd class="ml0 f5 home-team">Pittsburgh 4</dd>
+                        <dd class="ml0 f5 away-team">Cincinnati 5</dd>
                     </dl>
                     <dl class="w-50 w-25-l ph3 mb2">
-                        <dt class="f7 fw8">FINAL</dt>
-                        <dd class="ml0 f5">LA Angels 8</dd>
-                        <dd class="ml0 f5">Toronto 1</dd>
+                        <dt class="f7 fw8 inning">FINAL</dt>
+                        <dd class="ml0 f5 home-team">LA Angels 8</dd>
+                        <dd class="ml0 f5 away-team">Toronto 1</dd>
                     </dl>
                     <dl class="w-50 w-25-l ph3 mb2">
-                        <dt class="f7 fw8">4th Inning</dt>
-                        <dd class="ml0 f5">LA DODGERS -</dd>
-                        <dd class="ml0 f5">MILWALKEE BREWERS -</dd>
+                        <dt class="f7 fw8 inning">4th Inning</dt>
+                        <dd class="ml0 f5 home-team">LA DODGERS -</dd>
+                        <dd class="ml0 f5 away-team">MILWALKEE BREWERS -</dd>
                     </dl>
                 </div>
             </div>
