--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
               </header>
 
               <div class="sport mb3">
-                <h2 class="f4 fw8 mv0 bg-gold ph2 pv1 lh-solid">MLB</h2>
+                <h2 class="f4 fw8 mv0 bg-gold ph2 pv1 lh-solid flex items-center justify-center pa4">MLB</h2>
                 <div class="scores flex flex-wrap nl3 nr3">
-                    <dl class="w-50 w-25-l ph3 mb2">
+                    <!-- <dl class="w-50 w-25-l ph3 mb2">
                         <dt class="f7 fw8 inning">BOTTOM 4 INNING</dt>
                         <dd class="ml0 f5 home-team">Baltimore 9</dd>
                         <dd class="ml0 f5 away-team">Chi. Sox 0</dd>
@@ -55,7 +55,7 @@
                         <dt class="f7 fw8 inning">4th Inning</dt>
                         <dd class="ml0 f5 home-team">LA DODGERS -</dd>
                         <dd class="ml0 f5 away-team">MILWALKEE BREWERS -</dd>
-                    </dl>
+                    </dl> -->
                 </div>
             </div>
               </div>
