shade out the losing team's color

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SportsNow</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.9.1/tachyons.css">
     <link rel="stylesheet" href='./assets/css/style.css'>
 </head>
@@ -36,26 +38,6 @@
               <div class="sport mb3">
                 <h2 class="f4 fw8 mv0 bg-gold ph2 pv1 lh-solid flex items-center justify-center pa4">MLB</h2>
                 <div class="scores flex flex-wrap nl3 nr3">
-                    <!-- <dl class="w-50 w-25-l ph3 mb2">
-                        <dt class="f7 fw8 inning">BOTTOM 4 INNING</dt>
-                        <dd class="ml0 f5 home-team">Baltimore 9</dd>
-                        <dd class="ml0 f5 away-team">Chi. Sox 0</dd>
-                    </dl>
-                    <dl class="w-50 w-25-l ph3 mb2">
-                        <dt class="f7 fw8 inning">FINAL</dt>
-                        <dd class="ml0 f5 home-team">Pittsburgh 4</dd>
-                        <dd class="ml0 f5 away-team">Cincinnati 5</dd>
-                    </dl>
-                    <dl class="w-50 w-25-l ph3 mb2">
-                        <dt class="f7 fw8 inning">FINAL</dt>
-                        <dd class="ml0 f5 home-team">LA Angels 8</dd>
-                        <dd class="ml0 f5 away-team">Toronto 1</dd>
-                    </dl>
-                    <dl class="w-50 w-25-l ph3 mb2">
-                        <dt class="f7 fw8 inning">4th Inning</dt>
-                        <dd class="ml0 f5 home-team">LA DODGERS -</dd>
-                        <dd class="ml0 f5 away-team">MILWALKEE BREWERS -</dd>
-                    </dl> -->
                 </div>
             </div>
               </div>
