fixing media queries, need to fix multiple sizes

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
                   <div class="bg-black-80 pb5 pb6-m pb7-l">
                     <nav class="dt w-100 mw8 center"> 
                         <img id="pic" src="./assets/images/logo3.png">                   
-
-                      <div class="dtc w2 v-mid pa3">
-                      </div>
-                      
+  
                       <div class="dtc v-mid tr pa3">
                         <a class="f6 fw4 hover-red no-underline white-70 dn dib-ns pv2 ph3" href="/" >NBA</a> 
                         <a class="f6 fw4 hover-red no-underline white-70 dn dib-ns pv2 ph3" href="/" >MLB</a> 
@@ -40,12 +37,10 @@
                 <div class="scores flex flex-wrap nl3 nr3">
                 </div>
             </div>
-              </div>
 
-
-
-
-
+            <div class="fl w-10 pa2 widget">
+                <a class="twitter-timeline" data-width="220" data-height="400" data-theme="light" href="https://twitter.com/MLB?ref_src=twsrc%5Etfw">Tweets by MLB</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
             <script
             src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
